fixed tripView alignment

--- a/src/components/TripView/TripView.css
+++ b/src/components/TripView/TripView.css
@@ -249,10 +249,13 @@
   width: 300px;
   border-radius: 6px;
   padding-top: 5px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .trip-flex {
-  display: flex;
+  display: inline-flex;
   padding: 5px;
   flex-wrap: wrap;
   flex-direction: column;
